force-app/main/default/objects/Campaign/fields/vlocity_ins__MassEmailSubject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MassEmailSubject__c</fullName>
    <label>Email Subject</label>
    <type>TextArea</type>
</CustomField>