force-app/main/default/objects/Campaign/fields/vlocity_ins__ProcessPrefillBundle__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcessPrefillBundle__c</fullName>
    <description>Used when executing the campaign for each target via a Vlocity OmniScript. The Process Prefill Bundle specifies the prefill DataMapper mapping bundle to use when launching the OmniScript.</description>
    <label>Process Prefill Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>