force-app/main/default/objects/Campaign/recordTypes/Partner_Led_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Partner_Led_Campaign</fullName>
    <active>true</active>
    <description>Campaigns led and used by partners to market to their customers.</description>
    <label>Partner-Led Campaign</label>
</RecordType>